TestSuite/PascalABCTests/errors/err0209.pas
procedure Test(x: real:=sin(x));
begin
  
end;
begin
  
end.